--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1034,10 +1034,11 @@ dl dd {
                   </div>
 
 <article>
-  <header>
-    <h2>1v1.lol Unblocked – The Ultimate US Guide for Winning Every Match</h2>
-    <p>Locked out of your favorite game at school or work? Don’t sweat it. Here’s the inside scoop on <b>1v1 lol unblocked</b> how to play, where to find it, and what separates good players from the true champs.</p>
-  </header>
+    <p>1v1.lol is where the real action begins! This competitive online third-person shooter isn’t just about sharp aim. It’s about building fast and thinking on your feet. In every match, you’ll be dropping ramps, walls, and platforms, trying to outplay and outlast your rival.
+
+The main event? The 1v1 battle royale. Two players enter, but only one can claim victory as the last player standing. With every round, you’ll face fresh opponents and new challenges, so there’s never a dull moment.
+
+If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol is the place to be. Jump in, build your defense, and fight for the top spot. Who’s going to win this round? Only one way to find out!</p>
 
   <section>
     <h2>What is 1v1.lol and Why is It So Addictive?</h2>
