--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol.html">
-					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1 LOL" title="1v1 LOL" />
+					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1 LOL Unblocked" title="1v1 LOL Unblocked" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
