--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="./game/basketball-bros.html">
-				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				                <img src="../assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
