--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="./game/0-granny.html">
-				                <img src="assets/img/granny/granny.webp" alt=" Granny Game" title=" Granny Game" />
+				                <img src="../assets/img/granny/granny.webp" alt=" Granny Game" title=" Granny Game" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
