--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Unblocked Games Premium: Play a wide range of Unblocked Games that you can play anywhere, like school or work. Easy to start, no need to download, with many games to choose from.">
+    <meta name="description" content=" Unblocked Games Premium: Play a wide range of Unblocked Games that you can play anywhere, like school or work. Easy to start, no need to download, with many games to choose from.">
     <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
     <meta name="author" content="FAF Games Team">
     <!-- Title -->
@@ -268,7 +268,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="./game/block-blast-unblocked.html">
-				                <img src="assets/img/blockblast/block-blast.webp" alt="Block Blast" title="Block Blast" />
+				                <img src="../assets/img/blockblast/block-blast.webp" alt="Block Blast" title="Block Blast" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
