--- a/game/gunspin.html
+++ b/game/gunspin.html
@@ -477,6 +477,39 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+			<div class="container">
+				<div class="section">
+  <h2>About</h2>
+  <p>
+    <strong>GunSpin</strong> is an action-packed physics shooter where you fire a crazy variety of weapons and try to fling your gun as far as possible through wild, obstacle-filled levels. With every shot, your gun spins further—can you set a new distance record? Perfect for quick breaks, <strong>GunSpin Unblocked</strong> lets you enjoy all the fun online, even at school or work, with no download needed. Want the latest version? Try searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong> for easy access.
+  </p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>Left Mouse Click / Spacebar:</strong> Fire your gun</li>
+    <li><strong>Mouse:</strong> Navigate menus</li>
+    <li><strong>R:</strong> Restart level</li>
+    <li><strong>Esc:</strong> Pause/Menu</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> Max Gittel (Voodoo)</li>
+    <li><strong>Category:</strong> Action, Physics</li>
+    <li><strong>Genre:</strong> Shooter, Arcade</li>
+    <li><strong>Players:</strong> 500K+ (Active)</li>
+    <li><strong>Release Date:</strong> Original: 2020 | Unblocked: 2023</li>
+    <li><strong>Build:</strong> HTML5, WebGL</li>
+    <li><strong>Links:</strong> 
+      <a href="https://faf-games.github.io" target="_blank">unblocked games</a>
+    </li>
+  </ul>
+</div>
+				</div>
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
