--- a/game/gunspin.html
+++ b/game/gunspin.html
@@ -500,19 +500,21 @@
              <div class="container">
                 <div class="row">
 			<div class="container">
-				<div class="section">
+<div class="section">
   <h2>About</h2>
   <p>
-    <strong>GunSpin</strong> is an action-packed physics shooter where you fire a crazy variety of weapons and try to fling your gun as far as possible through wild, obstacle-filled levels. With every shot, your gun spins further—can you set a new distance record? Perfect for quick breaks, <strong>GunSpin Unblocked</strong> lets you enjoy all the fun online, even at school or work, with no download needed. Want the latest version? Try searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong> for easy access.
+    <strong>GunSpin</strong> is a wild, addictive physics shooter where you blast your gun through the air, aiming to reach record distances by firing and spinning through crazy stages. With each shot, your gun travels farther—unlocking new weapons, upgrades, and challenging levels along the way. <br><br>
+    If you're trying to play at school or work, <strong>GunSpin Unblocked</strong> is the way to go. No downloads, no hassle—just launch and play right in your browser! You can often find the latest version by searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong>.<br><br>
+    Looking for more titles like this? <a href="https://faf-games.github.io" target="_blank">Unblocked games</a> are online games that work anywhere, even on restricted networks. They’re perfect for students or anyone wanting quick, free fun anytime!
   </p>
 </div>
 
 <div class="section">
   <h2>Controls</h2>
   <ul>
-    <li><strong>Left Mouse Click / Spacebar:</strong> Fire your gun</li>
-    <li><strong>Mouse:</strong> Navigate menus</li>
-    <li><strong>R:</strong> Restart level</li>
+    <li><strong>Left Mouse Click / Spacebar:</strong> Fire</li>
+    <li><strong>Mouse:</strong> Menu navigation</li>
+    <li><strong>R:</strong> Restart</li>
     <li><strong>Esc:</strong> Pause/Menu</li>
   </ul>
 </div>
@@ -526,11 +528,9 @@
     <li><strong>Players:</strong> 500K+ (Active)</li>
     <li><strong>Release Date:</strong> Original: 2020 | Unblocked: 2023</li>
     <li><strong>Build:</strong> HTML5, WebGL</li>
-    <li><strong>Links:</strong> 
-      <a href="https://faf-games.github.io" target="_blank">unblocked games</a>
-    </li>
   </ul>
 </div>
+
 				</div>
                    <div class="col-12">
                       <div class="site-heading">
