--- a/game/gunspin.html
+++ b/game/gunspin.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Gunspin Unblocked: Play Now for Free on FAF Games </title>
-        <meta name="description" content="Play GunSpin, a fun and free arcade shooter game. Master the art of shooting to propel yourself further. Enjoy GunSpin unblocked online anytime!">
+        <meta name="description" content=" Play GunSpin, a fun and free arcade shooter game. Master the art of shooting to propel yourself further. Enjoy GunSpin unblocked online anytime!">
         <meta name="keywords" content="GunSpin game, Gunspin, gunspin Unblocked Games Premium, play GunSpin online, GunSpin free game, GunSpin unblocked, GunSpin shooter, GunSpin arcade, GunSpin game download, online GunSpin game, GunSpin gameplay, GunSpin tips">
 
         <meta name="author" content="FAF Games Team">
@@ -503,9 +503,9 @@
 <div class="section">
   <h2>About</h2>
   <p>
-    <strong>GunSpin</strong> is a wild, addictive physics shooter where you blast your gun through the air, aiming to reach record distances by firing and spinning through crazy stages. With each shot, your gun travels farther, unlocking new weapons, upgrades, and challenging levels along the way. <br><br>
-    If you are trying to play at school or work, <strong>GunSpin Unblocked</strong> is the way to go. No downloads, no hassle, just launch and play right in your browser! You can often find the latest version by searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong>.<br><br>
-    Discover a secret playground of fun with <a href="https://faf-games.github.io" target="_blank">unblocked games</a>—your instant passport to adventure, even when the rest of the internet says “no.” Break through the barriers, unleash boredom-busting classics, and turn any place into your own personal arcade!
+    <strong>GunSpin</strong> is a wild, addictive physics shooter where you blast your gun through the air, aiming to reach record distances by firing and spinning through crazy stages. With each shot, your gun travels farther, unlocking new weapons, upgrades, and challenging levels along the way.
+    If you are trying to play at school or work, <strong>Gun Spin</strong> is the way to go. No downloads, no hassle, just launch and play right in your browser! You can often find the latest version by searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong>.<br>
+    Discover a secret playground of fun with <a href="https://faf-games.github.io" target="_blank">unblocked games</a> your instant passport to adventure, even when the rest of the internet says “no.” Break through the barriers, unleash boredom-busting classics, and turn any place into your arcade!
   </p>
 </div>
 
