--- a/game/gunspin.html
+++ b/game/gunspin.html
@@ -505,7 +505,7 @@
   <p>
     <strong>GunSpin</strong> is a wild, addictive physics shooter where you blast your gun through the air, aiming to reach record distances by firing and spinning through crazy stages. With each shot, your gun travels farther, unlocking new weapons, upgrades, and challenging levels along the way.
     If you are trying to play at school or work, <strong>Gun Spin</strong> is the way to go. No downloads, no hassle, just launch and play right in your browser! You can often find the latest version by searching for <strong>gunspin github</strong> or <strong>gunspin unblocked</strong>.<br><br>
-Wherever you are—school, work, or home—<a href="https://faf-games.github.io" target="_blank">unblocked games</a> let you play what you want, no restrictions. Just click, relax, and enjoy.  </p>
+Wherever you are, school, work, or home <a href="https://faf-games.github.io" target="_blank">unblocked games</a> let you play what you want, no restrictions. Just click, relax, and enjoy.  </p>
 </div>
 
 <div class="section">
