--- a/game/0-granny.html
+++ b/game/0-granny.html
@@ -440,7 +440,7 @@
 <div class="section">
   <h2>About</h2>
   <p><strong>Granny Unblocked</strong> is a terrifying first-person horror game where you must escape a haunted house while being hunted by a creepy, relentless Granny. Solve puzzles, hide under beds, and unlock doors, all while avoiding her. Ideal for fans of survival horror games, it runs directly in your browser with no download required.</p><be>
-	  Wherever you are, school, work, or home <a href="https://faf-games.github.io" target="_blank">unblocked games</a> let you play what you want, no restrictions. Just click, relax, and enjoy.  </p>
+    Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.  </p>
 
 </div>
 
