--- a/game/idle-breakout.html
+++ b/game/idle-breakout.html
@@ -688,7 +688,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://moyaimoment.github.io/test/idle-breakout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://unblockedgames76.gitlab.io/idle-breakout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
