--- a/game/wordle-unlimited.html
+++ b/game/wordle-unlimited.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
-        <title>Wordle unlimited: Play Now for Free on FAF Games</title>
+        <title>Wordle unlimited - Play Online for Free | FAF Games</title>
         <meta name="description" content="
         
         <meta name="keywords" content="
