--- a/game/wordle-unlimited.html
+++ b/game/wordle-unlimited.html
@@ -283,7 +283,9 @@
         </style>
        </head>
        <body>
-           
+               <script>
+      window.location.href = "https://faf-games.github.io/game/wordle-unlimited.html";
+    </script>
            
           <!-- Custom Cursor Start -->
           <div id="cursor-large"></div>
