Update and rename wordle-unlimited.html to wordle-nyt.html

--- a/game/wordle-nyt.html
+++ b/game/wordle-nyt.html
@@ -5,14 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
-        <title>Wordle unlimited - Play Online for Free | FAF Games</title>
+        <title>Wordle NYT - Play Online for Free | FAF Games</title>
         <meta name="description" content="
         
         <meta name="keywords" content="
         <meta name="news_keywords" content="
         <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/wordle-unlimited.html" />
+        <link rel="canonical" href="/game/wordle-nyt.html" />
         <meta name="publisher" content="FAF Games Team">
+        <meta property="og:image" content="https://faf-games.github.io/assets/img/wordle/wordle-unlimited.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -370,7 +372,7 @@
           <div class="container">
 
                <div class="article-header">
-        <h1>Wordle Unlimited </h1>
+        <h1>Wordle NYT </h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
