--- a/game/wordle-nyt.html
+++ b/game/wordle-nyt.html
@@ -6,10 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
         <title>Wordle NYT - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content=" Play Wordle inspired by The New York Times. Guess 5-letter words with no daily limits! Enjoy endless puzzles, sharpen your mind, and have fun anytime.">
         
-        <meta name="keywords" content="
-        <meta name="news_keywords" content="
+        <meta name="keywords" content="Wordle NYT, Wordle unlimited, Wordle game, The New York Times Wordle, daily word game, play Wordle online, unlimited word puzzle, 5-letter word game, free Wordle alternative, Wordle clone, Wordle online free, endless Wordle">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/wordle-nyt.html" />
         <meta name="publisher" content="FAF Games Team">
