--- a/index.html
+++ b/index.html
@@ -1031,12 +1031,12 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 						<div class="games-item mobile">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="./game/wordle-unlimited.html">
-					                <img src="assets/img/wordle/wordle-unlimited1.webp" alt="Wordle Unlimited" title="Wordle Unlimited" />
+					            <a href="./game/wordle-nyt.html">
+					                <img src="assets/img/wordle/wordle-unlimited1.webp" alt="Wordle NYT" title="Wordle NYT" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h2><a href="./game/wordle-unlimited.html">Wordle Unlimited</a></h2>
+					            <h2><a href="./game/wordle-nyt.html">Wordle NYT</a></h2>
 					            <p class="game-meta">Skill | Desktop</p>
 					        </div>
 					    </div>
