--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1043,24 +1043,24 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
   <section>
     <h2>What is 1v1.lol and Why is It So Addictive?</h2>
     <p>
-      <b>1v1.lol</b> is more than just another shooter—it’s a quick-fire battle of wits, reflexes, and building skills. Imagine Fortnite’s building and shooting mechanics, but boiled down to their purest, fastest form. The best part? Games are short, matches are intense, and you’re always one clever move away from victory—or defeat.
+      <b>1v1.lol</b> is more than just another shooter, it is a quick-fire battle of wits, reflexes, and building skills. Imagine Fortnite’s building and shooting mechanics, but boiled down to their purest, fastest form. The best part? Games are short, matches are intense, and you’re always one clever move away from victory or defeat.
     </p>
     <p>
-      Whether you’re outsmarting opponents with walls and ramps or out-aiming them in a split-second shootout, every round’s a fresh chance to show what you’re made of. No wonder students and casual gamers alike keep coming back for more.
+      Whether you are outsmarting opponents with walls and ramps or out-aiming them in a split-second shootout, every round’s a fresh chance to show what you’re made of. No wonder students and casual gamers alike keep coming back for more.
     </p>
   </section>
 
   <section>
     <h2>How to Play 1v1.lol (Even When It is Blocked!)</h2>
     <p>
-      Getting started with <b>1v1.lol unblocked</b> is a breeze—even if your school or work network’s got tough rules. Here’s how most US players do it:
+      Getting started with <b>1v1.lol unblocked</b> is a breeze even if your school or work network’s got tough rules. Here’s how most US players do it:
     </p>
     <ol>
       <li>
         <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
       </li>
       <li>
-        <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror—there are tons out there.
+        <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror. There are tons out there.
       </li>
       <li>
         <b>Jump into a match</b> – Pick from game modes like classic 1v1, 2v2 box fights, practice, or even custom matches. You don’t need to create an account unless you want to save your stats.
@@ -1108,7 +1108,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
       <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
     </ul>
     <p>
-      Tinker with your keybinds if you want to play like a pro—most top players customize everything!
+      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
     </p>
   </section>
 
@@ -1120,13 +1120,13 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
     <ul>
       <li><b>Build smart, not just fast.</b> Slapping up walls for no reason burns through resources and leaves you wide open.</li>
       <li><b>Keep your cool when under fire.</b> Don’t panic-build. Stay calm and look for your opening.</li>
-      <li><b>Switch between building and shooting on the fly.</b> The faster you swap, the harder you are to hit—and the more pressure you put on your opponent.</li>
+      <li><b>Switch between building and shooting on the fly.</b> The faster you swap, the harder you are to hit and the more pressure you put on your opponent.</li>
       <li><b>Master different weapons.</b> Some players only spam one gun. Big mistake. Mix it up for best results.</li>
       <li><b>Use the environment.</b> Duck behind your buildings, ramp up high, and always try to get the high ground.</li>
-      <li><b>Practice in JustBuild or Aim Trainer.</b> Champions aren’t born—they’re built, one click at a time.</li>
+      <li><b>Practice in JustBuild or Aim Trainer.</b> Champions aren’t born, they are built, one click at a time.</li>
     </ul>
     <p>
-      Remember, there’s no shortcut to getting good—practice makes perfect. But these tips should put you a step ahead right out of the gate.
+      Remember, there’s no shortcut to getting good practice makes perfect. But these tips should put you a step ahead right out of the gate.
     </p>
   </section>
 
@@ -1135,7 +1135,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
     <dl>
       <dt>Is 1v1.lol unblocked legal to play at school?</dt>
       <dd>
-        It’s not illegal, but it might go against your school’s tech policies. Don’t get yourself in trouble—play during free time and use safe sites!
+        It’s not illegal, but it might go against your school’s tech policies. Don’t get yourself in trouble, play during free time, and use safe sites!
       </dd>
       <dt>Can I play on my phone?</dt>
       <dd>
@@ -1147,7 +1147,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
       </dd>
       <dt>Who created 1v1.lol?</dt>
       <dd>
-        1v1.lol was created by JustPlay.LOL, a team known for its fast-paced, competitive games.
+        JustPlay created 1v1.lol, a team known for its fast-paced, competitive games.
       </dd>
     </dl>
   </section>
