--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content=" Unblocked Games Premium: Play a wide range of Unblocked Games that you can play anywhere, like school or work. Easy to start, no need to download, with many games to choose from.">
     <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
     <meta name="author" content="FAF Games Team">
+    <meta name="msvalidate.01" content="78BDDA0FCB9E36EC915562DFF5E58613" />
+
     <!-- Title -->
     <title>Play Unblocked Games | Unblocked Games Premium</title>
 	<meta name="publisher" content="FAF Games Team">
@@ -62,7 +64,6 @@
 
 
 
-<link rel="manifest" href="https://faf-games.github.io/manifest.json">
 
 
 	
