--- a/index.html
+++ b/index.html
@@ -1252,6 +1252,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 	    </div>
 	</div>
 
+		<script src="https://minnit.chat/js/embed.js?c=1752216300" defer></script><span style="display: none;" class="minnit-chat-sembed" data-chatname="https://organizations.minnit.chat/991232442860146/c/Main?embed" data-style="width:90%; height:500px; max-height:90vh;" data-version="1.52">Chat</span><p class="powered-by-minnit"><a href="https://minnit.chat" target="_blank">Add a group chat to your website with Minnit Chat</a></p>
 
     <!-- Games Area End -->
     <!-- Footer Area Start -->
