--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,41 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 	    </div>
 	</div>
 
-		<script src="https://minnit.chat/js/embed.js?c=1752216300" defer></script><span style="display: none;" class="minnit-chat-sembed" data-chatname="https://organizations.minnit.chat/991232442860146/c/Main?embed" data-style="width:90%; height:500px; max-height:90vh;" data-version="1.52">Chat</span><p class="powered-by-minnit"><a href="https://minnit.chat" target="_blank">Add a group chat to your website with Minnit Chat</a></p>
+<!-- Chat Container -->
+<div id="chat-container" style="margin-left:5%; margin-bottom:80px;">
+  <!-- Button to Load Chat -->
+  <button id="join-chat-btn"
+          style="width:90%; height:500px; max-height:90vh;
+                 background:#1e1e1e; color:#fff; font-family:sans-serif;
+                 font-size:1.2em; display:flex; align-items:center; justify-content:center;
+                 border:none; cursor:pointer;">
+    Join&nbsp;Chat
+  </button>
+</div>
+
+<!-- Script to Replace Button with Minnit Chat -->
+<script>
+  document.getElementById('join-chat-btn').addEventListener('click', function () {
+    const chatContainer = document.getElementById('chat-container');
+
+    // 1. Create the Minnit Chat span
+    const span = document.createElement('span');
+    span.style.display = 'none'; // Will auto-show after Minnit loads
+    span.className = 'minnit-chat-sembed';
+    span.setAttribute('data-chatname', 'https://organizations.minnit.chat/991232442860146/c/Main?embed');
+    span.setAttribute('data-style', 'width:90%; height:500px; max-height:90vh;');
+    span.setAttribute('data-version', '1.52');
+
+    // 2. Create the Minnit embed script
+    const script = document.createElement('script');
+    script.src = 'https://minnit.chat/js/embed.js?c=1752216300';
+    script.defer = true;
+
+    // 3. Replace the button with the chat embed and load script
+    chatContainer.replaceChild(span, this);
+    chatContainer.appendChild(script);
+  });
+</script>
 
     <!-- Games Area End -->
     <!-- Footer Area Start -->
