--- a/index.html
+++ b/index.html
@@ -1252,9 +1252,9 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 	    </div>
 	</div>
 
-<!-- Chat Container -->
+<!-- Chat - Join Chat Button with FAFGAMES Room -->
 <div id="chat-container" style="margin-left:5%; margin-bottom:80px;">
-  <!-- Button to Load Chat -->
+  <!-- Click-to-load button -->
   <button id="join-chat-btn"
           style="width:90%; height:500px; max-height:90vh;
                  background:#1e1e1e; color:#fff; font-family:sans-serif;
@@ -1264,29 +1264,29 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
   </button>
 </div>
 
-<!-- Script to Replace Button with Minnit Chat -->
 <script>
   document.getElementById('join-chat-btn').addEventListener('click', function () {
     const chatContainer = document.getElementById('chat-container');
 
-    // 1. Create the Minnit Chat span
+    // Create Minnit chat embed
     const span = document.createElement('span');
-    span.style.display = 'none'; // Will auto-show after Minnit loads
+    span.style.display = 'none';
     span.className = 'minnit-chat-sembed';
-    span.setAttribute('data-chatname', 'https://organizations.minnit.chat/991232442860146/c/Main?embed');
+    span.setAttribute('data-chatname', 'https://organizations.minnit.chat/991232442860146/c/FAFGAMES?embed');
     span.setAttribute('data-style', 'width:90%; height:500px; max-height:90vh;');
     span.setAttribute('data-version', '1.52');
 
-    // 2. Create the Minnit embed script
     const script = document.createElement('script');
     script.src = 'https://minnit.chat/js/embed.js?c=1752216300';
     script.defer = true;
 
-    // 3. Replace the button with the chat embed and load script
+    // Replace button with chat and attach script
     chatContainer.replaceChild(span, this);
     chatContainer.appendChild(script);
+
   });
 </script>
+
 
     <!-- Games Area End -->
     <!-- Footer Area Start -->
