--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -407,7 +407,7 @@
       <div class="container">
 	      
  <div class="article-header">
-        <h1>Eggy Car </h1>>
+        <h1>Eggy Car </h1>
     </div>
 	      
         <div class="row justify-content-center">
