--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -573,26 +573,64 @@ dl dd {
              <div class="container">
                 <div class="row">
 						<section>
-    <h2>Your 1v1.lol Control Guide</h2>
+   <div class="container">
+    <!-- About Section -->
+    <div class="box">
+        <h2>About</h2>
+        <p>
+            <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required—just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
+        </p>
+        <p>
+            Whether you're training your reflexes or testing your skills in ranked matches, 1v1.lol keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it’s a true test of both your aim and your strategy.
+        </p>
+    </div>
+
+    <!-- Controls Section -->
+    <div class="box">
+        <h2>Controls</h2>
+        <ul>
+            <li><strong>WASD:</strong> Move your character</li>
+            <li><strong>Spacebar:</strong> Jump</li>
+            <li><strong>Shift:</strong> Crouch (toggle for precision or stealth)</li>
+            <li><strong>Mouse Movement:</strong> Look around / Aim</li>
+            <li><strong>Left Mouse Button:</strong> Shoot</li>
+            <li><strong>Right Mouse Button:</strong> Aim down sights (ADS)</li>
+            <li><strong>Q / F / Z / X / C:</strong> Build wall, floor, ramp, cone, roof respectively</li>
+            <li><strong>R:</strong> Reload weapon</li>
+            <li><strong>1–5:</strong> Switch weapons and building tools</li>
+            <li><strong>Tab:</strong> Open build/edit menu</li>
+            <li><strong>Esc:</strong> Pause/Menu</li>
+        </ul>
+    </div>
+
+    <!-- Game Information -->
+    <div class="box">
+        <h2>Game Information</h2>
+        <ul>
+            <li><strong>Developer:</strong> JustPlay.LOL</li>
+            <li><strong>Category:</strong> Shooter, Building</li>
+            <li><strong>Genre:</strong> <a href="#">Multiplayer Battle Royale</a></li>
+            <li><strong>Players:</strong> 10M+ (Global)</li>
+            <li><strong>Release Date:</strong> January 2020</li>
+            <li><strong>Build:</strong> HTML5, WebGL, JavaScript</li>
+            <li><strong>Game Modes:</strong> 1v1, Box 2v2, BR Duos, Custom Games, Practice</li>
+        </ul>
+    </div>
+	       <h2>Common Issues</h2>
     <p>
-      The controls are simple but deadly. Here is a quick cheat sheet for the most common setup:
+        While <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> delivers a thrilling experience for most players, a few common issues may occasionally interrupt the fun:
     </p>
     <ul>
-      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
-      <li><b>Left Mouse Button</b>: Shoot</li>
-      <li><b>Right Mouse Button</b>: Build</li>
-      <li><b>Spacebar</b>: Jump</li>
-      <li><b>E</b>: Use item</li>
-      <li><b>Q</b>: Switch weapons</li>
-      <li><b>R</b>: Reload</li>
-      <li><b>C</b>: Crouch</li>
-      <li><b>Z</b>: Zoom</li>
-      <li><b>1, 2, F</b>: Quick weapon switching</li>
-      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
+        <li><strong>Long Load Times:</strong> The game might take longer than usual to load on slower networks or during peak hours. Patience pays off—but refreshing the page can sometimes help speed things up.</li>
+        <li><strong>Unexpected Restarts:</strong> In rare cases, the game might suddenly restart or freeze mid-match, especially when switching between tabs or if the browser cache is full.</li>
+        <li><strong>Lag Spikes:</strong> Internet connection hiccups may cause brief lag or stuttering, particularly in multiplayer mode.</li>
+        <li><strong>Mobile Compatibility:</strong> Some controls and building features may not work smoothly on smaller screens or older mobile devices.</li>
     </ul>
     <p>
-      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
+        If you're experiencing any of these problems, try clearing your browser cache, updating to the latest version of your browser, or switching to a different device for smoother gameplay.
     </p>
+</div>
+
   </section>
       
 <h2 class="section-title">Not Working? Try Other Servers:</h2>
