--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -487,38 +487,16 @@ dl dd {
 
        <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 50px; text-align: center;">
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359"
+     crossorigin="anonymous"></script>
+<!-- Banner ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:750px;height:300px"
+     data-ad-client="ca-pub-5305579698272359"
+     data-ad-slot="7442749744"></ins>
 <script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/23079347111/Displayads', [750, 300], 'div-gpt-ad-1744096120141-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script><!-- /23079347111/Displayads -->
-<div id='div-gpt-ad-1744096120141-0' style='min-width: 750px; min-height: 300px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744096120141-0'); });
-  </script>
-</div>
-	      
-	<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
-      window.googletag = window.googletag || {cmd: []};
-
-      // GPT ad slots
-      var anchorSlot_2;
-
-      googletag.cmd.push(function() {
-        anchorSlot_2 = googletag.defineOutOfPageSlot('//23079347111/sticky', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
-        anchorSlot_2.addService(googletag.pubads());
-
-         // Enable SRA and services.
-        googletag.pubads().enableSingleRequest();
-        googletag.enableServices();
-        googletag.display(anchorSlot_2);
-      });
-    </script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 				
 			
 
@@ -618,7 +596,7 @@ dl dd {
     </div>
 	       <h2>Common Issues</h2>
     <p>
-        While <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> delivers a thrilling experience for most players, a few common issues may occasionally interrupt the fun:
+        While <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol</a> delivers a thrilling experience for most players, but a few common issues may occasionally interrupt the fun:
     </p>
     <ul>
         <li><strong>Long Load Times:</strong> The game might take longer than usual to load on slower networks or during peak hours. Patience pays off—but refreshing the page can sometimes help speed things up.</li>
@@ -627,7 +605,7 @@ dl dd {
         <li><strong>Mobile Compatibility:</strong> Some controls and building features may not work smoothly on smaller screens or older mobile devices.</li>
     </ul>
     <p>
-        If you're experiencing any of these problems, try clearing your browser cache, updating to the latest version of your browser, or switching to a different device for smoother gameplay.
+        If you are experiencing any of these problems, try clearing your browser cache, updating to the latest version of your browser, or switching to a different device for smoother gameplay.
     </p>
 </div>
 
