--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -591,7 +591,7 @@ dl dd {
       <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
     </ul>
     <p>
-      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
+      Tinker with your keybinds, if you want to play like a pro Most top players customize everything!
     </p>
   </section>
       
@@ -1034,12 +1034,14 @@ dl dd {
                   </div>
 
 <article>
-    <p>1v1.lol is where the real action begins! This competitive online third-person shooter isn’t just about sharp aim. It’s about building fast and thinking on your feet. In every match, you’ll be dropping ramps, walls, and platforms, trying to outplay and outlast your rival.
+    <p>1v1.lol is where the real action begins! This competitive online third-person shooter isn’t just about sharp aim. It is about building fast and thinking on your feet. In every match, you’ll be dropping ramps, walls, and platforms, trying to outplay and outlast your rival.
 
-The main event? The 1v1 battle royale. Two players enter, but only one can claim victory as the last player standing. With every round, you’ll face fresh opponents and new challenges, so there’s never a dull moment.
+The main event? The 1v1 battle royale. Two players enter, but only one can claim victory as the last player standing. With every round, you will face fresh opponents and new challenges, so there’s never a dull moment.
 
 If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol is the place to be. Jump in, build your defense, and fight for the top spot. Who’s going to win this round? Only one way to find out!</p>
-
+<p>
+    Want to play the official version of <a href="https://faf-games.github.io/game/1v1-lol-unblocked.html" target="_blank">1v1.lol</a>? Just click the link and jump straight into the action—no installs, no hassle!
+</p>
   <section>
     <h2>What is 1v1.lol and Why is It So Addictive?</h2>
     <p>
@@ -1057,7 +1059,7 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
     </p>
     <ol>
       <li>
-        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
+        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>FAF Games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
       </li>
       <li>
         <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror. There are tons out there.
@@ -1074,41 +1076,18 @@ If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol
   <section>
     <h2>Game Modes – There is More Than Meets the Eye</h2>
     <p>
-      What keeps 1v1.lol so fresh? It’s all about the variety:
+      What keeps 1v1.lol so fresh? It is all about the variety:
     </p>
     <ul>
       <li><b>Classic 1v1</b> – A true test of solo skills. Outbuild and outshoot your rival.</li>
       <li><b>Box 2v2</b> – Team up and take on another pair in tactical showdowns.</li>
-      <li><b>Battle Royale</b> – Survive till the end in a multi-player free-for-all. Last one standing wins!</li>
-      <li><b>JustBuild</b> – Want to practice building without the stress? This mode’s for you.</li>
+      <li><b>Battle Royale</b> – Survive till the end in a multi-player free for all. Last one standing wins!</li>
+      <li><b>JustBuild</b> – Want to practice building without the stress? This mode is for you.</li>
       <li><b>Aim Trainer</b> – Hone your shot with a dedicated mode built for improvement.</li>
       <li><b>Party Mode</b> – Play private matches with friends, set your own rules, and have a blast.</li>
     </ul>
     <p>
-      Each mode got its own vibe, so try 'em all and see what fits your style.
-    </p>
-  </section>
-
-  <section>
-    <h2>Mastering the Controls</h2>
-    <p>
-      The controls are simple but deadly. Here is a quick cheat sheet for the most common setup:
-    </p>
-    <ul>
-      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
-      <li><b>Left Mouse Button</b>: Shoot</li>
-      <li><b>Right Mouse Button</b>: Build</li>
-      <li><b>Spacebar</b>: Jump</li>
-      <li><b>E</b>: Use item</li>
-      <li><b>Q</b>: Switch weapons</li>
-      <li><b>R</b>: Reload</li>
-      <li><b>C</b>: Crouch</li>
-      <li><b>Z</b>: Zoom</li>
-      <li><b>1, 2, F</b>: Quick weapon switching</li>
-      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
-    </ul>
-    <p>
-      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
+      Each mode got its vibe, so try 'em all and see what fits your style.
     </p>
   </section>
 
