--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>1v1.lol - Play Online for Free | FAF Games</title>
-        <meta name="description" content="1v1.lol Unblocked, a competitive third-person shooter. Build strategically in modes like battle royale, box fight, and zone wars. Be the last player standing!">
+        <meta name="description" content="1v1.lol is the official online shooter. Build, battle, and win in box fights, zone wars, and battle royale. Play instantly in your browser!">
         <meta name="title" content="1v1 LOL Unblocked">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
@@ -1049,137 +1049,7 @@ dl dd {
                       </div>
                   </div>
 
-<article>
-    <p>1v1.lol is where the real action begins! This competitive online third-person shooter isn’t just about sharp aim. It’s about building fast and thinking on your feet. In every match, you’ll be dropping ramps, walls, and platforms, trying to outplay and outlast your rival.
 
-The main event? The 1v1 battle royale. Two players enter, but only one can claim victory as the last player standing. With every round, you’ll face fresh opponents and new challenges, so there’s never a dull moment.
-
-If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol is the place to be. Jump in, build your defense, and fight for the top spot. Who’s going to win this round? Only one way to find out!</p>
-
-  <section>
-    <h2>What is 1v1.lol and Why is It So Addictive?</h2>
-    <p>
-      <b>1v1.lol</b> is more than just another shooter, it is a quick-fire battle of wits, reflexes, and building skills. Imagine Fortnite’s building and shooting mechanics, but boiled down to their purest, fastest form. The best part? Games are short, matches are intense, and you’re always one clever move away from victory or defeat.
-    </p>
-    <p>
-      Whether you are outsmarting opponents with walls and ramps or out-aiming them in a split-second shootout, every round’s a fresh chance to show what you’re made of. No wonder students and casual gamers alike keep coming back for more.
-    </p>
-  </section>
-
-  <section>
-    <h2>How to Play 1v1.lol (Even When It is Blocked!)</h2>
-    <p>
-      Getting started with <b>1v1.lol unblocked</b> is a breeze even if your school or work network’s got tough rules. Here’s how most US players do it:
-    </p>
-    <ol>
-      <li>
-        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
-      </li>
-      <li>
-        <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror. There are tons out there.
-      </li>
-      <li>
-        <b>Jump into a match</b> – Pick from game modes like classic 1v1, 2v2 box fights, practice, or even custom matches. You don’t need to create an account unless you want to save your stats.
-      </li>
-    </ol>
-    <p>
-      Pro tip: Got trouble loading the game? Try clearing your browser cache, switching devices, or connecting at home. School networks can be tricky, but where there’s a will, there’s a way!
-    </p>
-  </section>
-
-  <section>
-    <h2>Game Modes – There is More Than Meets the Eye</h2>
-    <p>
-      What keeps 1v1.lol so fresh? It’s all about the variety:
-    </p>
-    <ul>
-      <li><b>Classic 1v1</b> – A true test of solo skills. Outbuild and outshoot your rival.</li>
-      <li><b>Box 2v2</b> – Team up and take on another pair in tactical showdowns.</li>
-      <li><b>Battle Royale</b> – Survive till the end in a multi-player free-for-all. Last one standing wins!</li>
-      <li><b>JustBuild</b> – Want to practice building without the stress? This mode’s for you.</li>
-      <li><b>Aim Trainer</b> – Hone your shot with a dedicated mode built for improvement.</li>
-      <li><b>Party Mode</b> – Play private matches with friends, set your own rules, and have a blast.</li>
-    </ul>
-    <p>
-      Each mode got its own vibe, so try 'em all and see what fits your style.
-    </p>
-  </section>
-
-  <section>
-    <h2>Mastering the Controls</h2>
-    <p>
-      The controls are simple but deadly. Here is a quick cheat sheet for the most common setup:
-    </p>
-    <ul>
-      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
-      <li><b>Left Mouse Button</b>: Shoot</li>
-      <li><b>Right Mouse Button</b>: Build</li>
-      <li><b>Spacebar</b>: Jump</li>
-      <li><b>E</b>: Use item</li>
-      <li><b>Q</b>: Switch weapons</li>
-      <li><b>R</b>: Reload</li>
-      <li><b>C</b>: Crouch</li>
-      <li><b>Z</b>: Zoom</li>
-      <li><b>1, 2, F</b>: Quick weapon switching</li>
-      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
-    </ul>
-    <p>
-      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
-    </p>
-  </section>
-
-  <section>
-    <h2>Winning Tips and Battle-Tested Strategies</h2>
-    <p>
-      Want to stop losing to campers or sweat-lords? Here’s how real 1v1.lol legends do it:
-    </p>
-    <ul>
-      <li><b>Build smart, not just fast.</b> Slapping up walls for no reason burns through resources and leaves you wide open.</li>
-      <li><b>Keep your cool when under fire.</b> Don’t panic-build. Stay calm and look for your opening.</li>
-      <li><b>Switch between building and shooting on the fly.</b> The faster you swap, the harder you are to hit and the more pressure you put on your opponent.</li>
-      <li><b>Master different weapons.</b> Some players only spam one gun. Big mistake. Mix it up for best results.</li>
-      <li><b>Use the environment.</b> Duck behind your buildings, ramp up high, and always try to get the high ground.</li>
-      <li><b>Practice in JustBuild or Aim Trainer.</b> Champions aren’t born, they are built, one click at a time.</li>
-    </ul>
-    <p>
-      Remember, there’s no shortcut to getting good practice makes perfect. But these tips should put you a step ahead right out of the gate.
-    </p>
-  </section>
-
-  <section>
-    <h2>Frequently Asked Questions (FAQ)</h2>
-    <dl>
-      <dt>Is 1v1.lol unblocked legal to play at school?</dt>
-      <dd>
-        It’s not illegal, but it might go against your school’s tech policies. Don’t get yourself in trouble, play during free time, and use safe sites!
-      </dd>
-      <dt>Can I play on my phone?</dt>
-      <dd>
-        Absolutely. 1v1.lol is available on web browsers, Android, and iOS. Just open your browser or download the app from your store.
-      </dd>
-      <dt>What are the best sites for unblocked games?</dt>
-      <dd>
-        Trusted sites like <a href="https://faf-games.github.io" target="_blank">unblocked games</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
-      </dd>
-      <dt>Who created 1v1.lol?</dt>
-      <dd>
-        JustPlay created 1v1.lol, a team known for its fast-paced, competitive games.
-      </dd>
-    </dl>
-  </section>
-
-  <section>
-    <h2>Ready to Play?</h2>
-    <p>
-      No more waiting around! With this guide, you are all set to play <b>1v1.lol unblocked</b> and maybe even climb the leaderboards. Whether you’re a beginner or a seasoned shooter, there’s always a new trick to learn, a new rival to face, and a new victory to claim.
-    </p>
-    <p>
-      Hungry for more? Check out our <a href="https://faf-games.github.io" target="_blank">unblocked games</a> library for dozens of quick, free games you can play anywhere, anytime.
-    </p>
-  </section>
-
-    <p>Last updated: May 2025</p>
-</article>
 			
               </div>
             </div>
