--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -281,99 +281,40 @@
                 margin-top: 20px
             }
 
-body {
-  background: #181820;
-  color: #e3e3e3;
-  font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-}
-
-article {
-  max-width: 820px;
-  margin: 40px auto;
-  background: rgba(24, 24, 32, 0.97);
-  padding: 36px 28px 36px 28px;
-  border-radius: 16px;
-  box-shadow: 0 2px 16px rgba(0,0,0,0.33);
-}
-
-h2, h3, h4 {
-  color: #fff950;
-  margin-top: 1.6em;
-  margin-bottom: 0.5em;
-  font-family: 'Bebas Neue', 'Oswald', Arial, sans-serif;
-  letter-spacing: 1px;
-}
-
-
-
-h2 {
-  font-size: 1.4rem;
-  line-height: 1.3;
-  color: #ffdc40;
-  margin-bottom: 0.6em;
-}
-
-h3 {
-  font-size: 1.1rem;
-  color: #f9e897;
-  margin-bottom: 0.6em;
-}
-
-ul, ol {
-  margin: 1em 0 1em 2em;
-  padding: 0;
-}
-
-li {
-  margin-bottom: 0.5em;
-}
-
-b, strong {
-  color: #ffd560;
-  font-weight: 600;
-}
-
-a {
-  color: #00dcff;
-  text-decoration: none;
-  font-weight: 600;
-  transition: color 0.2s;
-}
-
-a:hover {
-  color: #fff950;
-}
-
-dl dt {
-  margin-top: 1em;
-  color: #ffd560;
-  font-weight: 600;
-}
-dl dd {
-  margin-bottom: 0.6em;
-  margin-left: 0.9em;
-  color: #e3e3e3;
-}
-
-@media (max-width: 900px) {
-  article {
-    padding: 16px 6vw 24px 6vw;
-  }
-  h1 { font-size: 1.4rem;}
-  h2 { font-size: 1.07rem;}
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-  background: #23233a;
-}
-::-webkit-scrollbar-thumb {
-  background: #34344a;
-  border-radius: 5px;
-}
+		{
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #fff;
+            margin: 20px;
+        }
+        .container {
+            margin: auto;
+        }
+        .box {
+            background-color: #1e1e1e;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #fff;
+            border-bottom: 2px solid #555;
+            padding-bottom: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        a {
+            color: #4da6ff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
             
         </style>
 
