--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -334,19 +334,19 @@
 {
   "@context": "https://schema.org",
   "@type": "VideoGame",
-  "name": "1v1.lol",
-  "description": "Play 1v1.lol Unblocked, a competitive third-person shooter. Build strategically in modes like battle royale, box fight, and zone wars. Be the last player standing! Play single-player or multiplayer modes.",
+  "name": "1v1.lol official",
+  "description": "1v1.lol is a fast-paced shooter where you build and fight in real time. Play official battle royale, box fights, and more—no download needed!",
   "genre": ["Shooter", "Battle Royale", "Strategy"],
   "publisher": {
     "@type": "Organization",
     "name": "FAF Games Team"
   },
-	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol.jpg",
+	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-unblocked.webp",
   "operatingSystem": "Any web browser",
   "applicationCategory": "Game",
   "aggregateRating": {
     "@type": "AggregateRating",
-    "ratingValue": 4.8,
+    "ratingValue": 8.9,
     "bestRating": 5,
     "reviewCount": 1200
   },
@@ -466,7 +466,7 @@
         <section class="pb-120 mt-minus-300">
           <div class="container">
 		  <div class="article-header">
-        <h1>1v1.LOL Unblocked </h1>
+        <h1>1v1.LOL </h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
