--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1040,7 +1040,7 @@ The main event? The 1v1 battle royale. Two players enter, but only one can claim
 
 If you love quick battles, tactical building, and outsmarting your foes, 1v1.lol is the place to be. Jump in, build your defense, and fight for the top spot. Who’s going to win this round? Only one way to find out!</p>
 <p>
-   Looking for the original? <a href="https://faf-games.github.io/game/1v1-lol-unblocked.html" target="_blank">1v1.lol</a>. Click here to play the Official version.
+   Looking for the original? <a href="https://faf-games.github.io/game/1v1-lol-unblocked.html">1v1.lol</a>. Click here to play the Official version.
 </p>
   <section>
     <h2>What is 1v1.lol and Why is It So Addictive?</h2>
