--- a/index.html
+++ b/index.html
@@ -339,6 +339,22 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
                                     </div>
                                 </div>
                             </div>
+
+				       				        <!-- start game item -->
+				       <div class="games-item desktop">
+					    <div class="games-single-item img-contain-isotope">
+					        <div class="games-thumb">
+					            <a href="../game/1v1-lol-unblocked.html">
+					                <img src="../assets/img/1v1.lol/1v1-lol-unblocked.webp" alt="1v1.LOL" title="1v1.LOL" />
+					            </a>
+					        </div>
+					        <div class="games-desc">
+					            <h2><a href="../game/1v1-lol-unblocked.html">1v1.LOL Official</a></h2>
+					            <p class="game-meta">Action | Shooting | Desktop</p>
+					        </div>
+					    </div>
+					</div>
+					<!-- end game item -->
                             <!-- end game item -->
 				 <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
