--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -692,6 +692,21 @@ dl dd {
                   <div class="col-12">
                       <div class="games-masonary">
                           <div class="clearfix gamesContainer">
+				   <!-- start game item -->
+				       <div class="games-item desktop">
+					    <div class="games-single-item img-contain-isotope">
+					        <div class="games-thumb">
+					            <a href="../game/1v1-lol-unblocked.html">
+					                <img src="../assets/img/1v1.lol/1v1-lol-unblocked.webp" alt="1v1.LOL" title="1v1.LOL" />
+					            </a>
+					        </div>
+					        <div class="games-desc">
+					            <h2><a href="../game/1v1-lol-unblocked.html">1v1.LOL Official</a></h2>
+					            <p class="game-meta">Action | Shooting | Desktop</p>
+					        </div>
+					    </div>
+					</div>
+					<!-- end game item -->
                               <div class="games-item desktop">
                                   <div class="games-single-item img-contain-isotope">
                                       <div class="games-thumb">
@@ -734,6 +749,21 @@ dl dd {
                                   </div>
                               </div>
                               <!-- end game item -->
+				  <!-- start game item -->
+                                     <div class="games-item desktop">
+        <div class="games-single-item img-contain-isotope">
+            <div class="games-thumb">
+                <a href="./game/deadshot-io.html">
+                    <img src="assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
+                </a>
+            </div>
+            <div class="games-desc">
+                <h2><a href="./game/deadshot-io.html">Deadshot.io</a></h2>
+                <p class="game-meta">Shooting | Desktop</p>
+            </div>
+        </div>
+    </div>
+    <!-- end game item -->
                               <div class="games-item desktop">
                                   <div class="games-single-item img-contain-isotope">
                                       <div class="games-thumb">
