--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -738,12 +738,12 @@
 				       <div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="../game/1v1-lol-unblocked.html">
-					                <img src="../assets/img/1v1.lol/1v1-lol-unblocked.webp" alt="1v1.LOL" title="1v1.LOL" />
+					            <a href="../game/1v1-lol.html">
+					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1.LOL Unblocked" title="1v1.LOL Unblocked" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h2><a href="../game/1v1-lol-unblocked.html">1v1.LOL Official</a></h2>
+					            <h2><a href="../game/1v1-lol.html">1v1.LOL</a></h2>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
