--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -697,7 +697,7 @@ dl dd {
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol-unblocked.html">
-					                <img src="../assets/img/1v1.lol/1v1-lol-unblocked.webp" alt="1v1.LOL" title="1v1.LOL" />
+					                <img src="../assets/img/1v1.lol/1v1-lol-official.webp" alt="1v1.LOL" title="1v1.LOL" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
