--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol.html">
-					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1 LOL Unblocked" title="1v1 LOL Unblocked" />
+					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1.LOL Unblocked" title="1v1.LOL Unblocked" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h2><a href="../game/1v1-lol.html">1v1 LOL</a></h2>
+					            <h2><a href="../game/1v1-lol.html">1v1.LOL</a></h2>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
