--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -535,6 +535,7 @@
             <li><strong>Game Modes:</strong> 1v1, Box 2v2, BR Duos, Custom Games, Practice</li>
         </ul>
     </div>
+	   <div class="box">
 	       <h2>Common Issues</h2>
     <p>
         While <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol</a> delivers a thrilling experience for most players, but a few common issues may occasionally interrupt the fun:
@@ -549,6 +550,7 @@
         If you are experiencing any of these problems, try clearing your browser cache, updating to the latest version of your browser, or switching to a different device for smoother gameplay.
     </p>
 </div>
+	   </div>
 
   </section>
       
