--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -497,10 +497,10 @@
     <div class="box">
         <h2>About</h2>
         <p>
-            1v1.lol is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required—just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
+            1v1.lol is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required, just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
         </p>
         <p>
-            Whether you're training your reflexes or testing your skills in ranked matches,  <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it’s a true test of both your aim and your strategy.
+            Whether you're training your reflexes or testing your skills in ranked matches,  <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it is a true test of both your aim and your strategy.
         </p>
     </div>
 
