--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -487,39 +487,16 @@ dl dd {
 
        <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 50px; text-align: center;">
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305579698272359"
+     crossorigin="anonymous"></script>
+<!-- Banner ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:750px;height:300px"
+     data-ad-client="ca-pub-5305579698272359"
+     data-ad-slot="7442749744"></ins>
 <script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/23079347111/Displayads', [750, 300], 'div-gpt-ad-1744096120141-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script><!-- /23079347111/Displayads -->
-<div id='div-gpt-ad-1744096120141-0' style='min-width: 750px; min-height: 300px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1744096120141-0'); });
-  </script>
-</div>
-	      
-	<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
-      window.googletag = window.googletag || {cmd: []};
-
-      // GPT ad slots
-      var anchorSlot_2;
-
-      googletag.cmd.push(function() {
-        anchorSlot_2 = googletag.defineOutOfPageSlot('//23079347111/sticky', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
-        anchorSlot_2.addService(googletag.pubads());
-
-         // Enable SRA and services.
-        googletag.pubads().enableSingleRequest();
-        googletag.enableServices();
-        googletag.display(anchorSlot_2);
-      });
-    </script>
-				
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
 			
 
 	</div>
