--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -500,7 +500,7 @@
             1v1.lol is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required, just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
         </p>
         <p>
-            Whether you're training your reflexes or testing your skills in ranked matches,  <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it is a true test of both your aim and your strategy.
+            Whether you are training your reflexes or testing your skills in ranked matches,  <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it is a true test of both your aim and your strategy.
         </p>
     </div>
 
@@ -538,10 +538,10 @@
 	   <div class="box">
 	       <h2>Common Issues</h2>
     <p>
-        While <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol</a> delivers a thrilling experience for most players, but a few common issues may occasionally interrupt the fun:
+        While <b>1v1.lol</b> delivers a thrilling experience for most players, a few common issues may occasionally interrupt the fun:
     </p>
     <ul>
-        <li><strong>Long Load Times:</strong> The game might take longer than usual to load on slower networks or during peak hours. Patience pays off—but refreshing the page can sometimes help speed things up.</li>
+        <li><strong>Long Load Times:</strong> The game might take longer than usual to load on slower networks or during peak hours. Patience pays off, but refreshing the page can sometimes help speed things up.</li>
         <li><strong>Unexpected Restarts:</strong> In rare cases, the game might suddenly restart or freeze mid-match, especially when switching between tabs or if the browser cache is full.</li>
         <li><strong>Lag Spikes:</strong> Internet connection hiccups may cause brief lag or stuttering, particularly in multiplayer mode.</li>
         <li><strong>Mobile Compatibility:</strong> Some controls and building features may not work smoothly on smaller screens or older mobile devices.</li>
