--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -730,12 +730,12 @@ dl dd {
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
-                <a href="./game/deadshot-io.html">
+                <a href="https://faf-games.github.io/game/deadshot-io.html">
                     <img src="/assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
                 </a>
             </div>
             <div class="games-desc">
-                <h3><a href="./game/deadshot-io.html">Deadshot.io</a></h3>
+                <h3><a href="https://faf-games.github.io/game/deadshot-io.html">Deadshot.io</a></h3>
                 <p class="game-meta">Shooting | Desktop</p>
             </div>
         </div>
