--- a/game/1v1-lol-unblocked.html
+++ b/game/1v1-lol-unblocked.html
@@ -13,7 +13,7 @@
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/1v1-lol-unblocked.html" />
 	<meta name="publisher" content="FAF Games Team">
-	 <meta property="og:image" content="https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-unblocked.webp">
+	 <meta property="og:image" content="https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-official.webp">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
