--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   "@type": "WebSite",
   "name": "FAF Games",
   "url": "https://faf-games.github.io",
-  "description": "FAF Games provides Unblocked Games 6x—free, premium-quality games instantly playable at schools or workplaces without any restrictions.",
-  "keywords": ["unblocked games", "unblocked games 6x", "premium games", "free online games"],
+  "description": "Unblocked Games: Play a wide range of Unblocked Games Premium you can play at school, work, or anywhere. No downloads needed, just click and start playing.",
+  "keywords": ["unblocked games", "unblocked games 6x", "Unblocked Games Premium", "free online games"],
   "publisher": {
     "@type": "Organization",
     "name": "FAF Games team"
